cabal-version:      3.0
name:               FantasyRealms
version:            0.1.0.0
synopsis:           Scoring calculator for the Fantasy Realms card game

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Martijn van Steenbergen
maintainer:         martijn@van.steenbergen.nl

-- A copyright notice.
-- copyright:
category:           Game
extra-source-files: CHANGELOG.md

common warnings
    ghc-options:      -Wall
    build-depends:    base ^>=4.17.2.1, containers ^>= 0.7

library
    import:           warnings
    exposed-modules:  FantasyRealms

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    Boolean ^>= 0.2.4
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite FantasyRealms-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          FantasyRealmsTest.hs
    build-depends:    FantasyRealms, tasty ^>= 1.5, tasty-hunit ^>= 0.10
